--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,20 +9,35 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body style="margin: 0">
+  <body style="margin: 0" class="background">
 
     <div class="navbar">
     
-    <ul>
-      <li><a href="default.asp">Home</a></li>
-      <li><a href="news.asp">News</a></li>
-      <li><a href="contact.asp">Contact</a></li>
-      <li><a href="about.asp">About</a></li>
-      <li id="styling-logo" >Friendly chat</li>
-    </ul>
+      <ul>
+        <li class="dropdown">
+        
+        <%= link_to "Sign-in", new_user_registration_path, class: "dropbtn" %>
+
+          <div class="dropdown-content">
+            <%= link_to "Sign-up", new_user_registration_path%>
+            <%= link_to "Log-in", new_user_session_path %> 
+            <%= link_to "Sign-out", destroy_user_session_path, method: :delete%>  
+          </div>        
+
+        </li>
+        
+        <li><%=link_to "Rooms", root_path%></li>
+        
+        <% if current_user %>
+          <li><%=link_to "Profile", users_path(current_user.id)%></li>
+        <%end%>
+        
+        <li id="styling-logo">Friendly.chat</li>
+      </ul>
+
     </div>
 
-    <div style="margin-left: 15px">
+    <div style="margin-left: 15px" id="margin-top">
       <%= yield %>
     </div>
 
